--- a/_config.yml
+++ b/_config.yml
@@ -4,10 +4,10 @@
 permalink:           pretty
 
 # Setup
-title:               Lanyon
-tagline:             'A Jekyll theme'
-description:         'A reserved <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that places the utmost gravity on content with a hidden drawer. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
-url:                 http://lanyon.getpoole.com
+title:               JCP on GitHub
+tagline:             'JCP on GitHub'
+description:         'Documentation about setup of the Project in the JCP area on GitHub'
+url:                 https://jcp.org
 baseurl:             '/jsr348'
 paginate:            5
 
